--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -3,15 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Genshindle</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <div class="header">
+        <div class="container">
+          <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
+          <ul class="navbar">
+            <li>
+              <a href="index.html">Início</a>
+            </li>
+            <li class="agora">
+              <a href="RandomizadorCaracter.html">Quiz</a>
+            </li>
+            <li>|</li>
+            <li>
+              <a href="Login.html">Login</a>
+            </li>
+            <li>
+              <a href="Cadastro.html">Cadastro</a>
+            </li>
+          </ul>
+        </div>
+    </div>
     <button onclick="Randomizar()">
         Randomizar um personagem
     </button>
     <div id="div_caracter_icon">
         <img src="assets/imgs/iconCaracter/ayaka.webp" alt="" >
     </div>
+    <label for="nome_personagem_input">Nome do personagem:</label>
+    <input type="text" id="nome_personagem_input">
 </body>
 </html>
 
