--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Genshin | Página Inicial</title>
+
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="container">
+          <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
+          <ul class="navbar">
+            <li class="agora">
+              <a href="#">Início</a>
+            </li>
+            <li>
+              <a href="RandomizadorCaracter.html">Quiz</a>
+            </li>
+            <li>|</li>
+            <li>
+              <a href="Login.html">Login</a>
+            </li>
+            <li>
+              <a href="Cadastro.html">Cadastro</a>
+            </li>
+          </ul>
+        </div>
+    </div>
+
+    <div class="banner">
+        
+      </div>
 </body>
 </html>
