web data viz Instalado

--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -22,6 +22,11 @@
         Seu navegador não suporta o elemento de vídeo.
     </video>
     <div class="form-box">
+        <div class="alerta_erro">
+            <div class="card_erro" id="cardErro">
+              <span id="mensagem_erro"></span>
+            </div>
+        </div>
         <div class="form-value">
 
             <h2>CADASTRE-SE</h2>
