--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -10,7 +10,7 @@
     <script src="./JS/Cadastro.js"></script>
     
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
-    <link rel="stylesheet" href="CSS/cadastro.css">
+    <link rel="stylesheet" href="CSS/cadastro_login.css">
     
 
 </head>
