--- a/Site/public/Login.html
+++ b/Site/public/Login.html
@@ -6,29 +6,41 @@
     <title>Login - Genshin</title>
 
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
-    <link rel="stylesheet" href="CSS/cadastro.css">
+    <link rel="stylesheet" href="CSS/cadastro_login.css">
 </head>
 <body>
 
-    <div class="login">
+    <video autoplay muted loop>
+        <source src="assets/videos/Background/FundoLogar.mp4" type="video/mp4">
+        Seu navegador não suporta o elemento de vídeo.
+    </video>
+
+    <div class="form-box">
         <div class="alerta_erro">
             <div class="card_erro" id="cardErro">
                 <span id="mensagem_erro"></span>
             </div>
         </div>
-        <div class="container">
-            <div class="card card-login">
-                <h2>Login</h2>
-                <div class="formulario">
-                    <div class="campo">
-                        <span>E-mail:</span>
-                        <input id="email_input" type="text" placeholder="Login">
-                    </div>
-                    <div class="campo">
-                        <span>Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******">
-                    </div>
-                    <button class="botao" onclick="entrar()">
+        <div class="form-value">
+
+            <h2>LOGIN</h2>
+            <div class="inputbox">
+
+                <span>
+                    <label for="email_input">Email</label>
+                </span>
+                <input type="email" id="email_input">
+
+            </div>
+            <div class="inputbox">
+
+                <span>
+                    <label for="senha_input">Senha</label>
+                </span>
+                <input type="password" id="senha_input">
+
+            </div>
+                    <button id="btCadastro" onclick="entrar()">
                         Entrar
                     </button><a
                     href="index.html">Voltar a
