--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshindle</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
 <body>
     <div class="header">
