organização das paginas

--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin | Página Inicial</title>
+    <title>Genshin | Personagens</title>
 
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
 <body>
+
     <div class="header">
         <div class="container">
           <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
           <div>
             <ul class="navbar">
-            <li class="agora">
-              <a href="#">Início</a>
-            </li>
             <li>
-              <a href="Personagens.html">Personagens</a>
+              <a href="index.html">Início</a>
+            </li>
+            <li class="agora">
+              <a href="#">Personagens</a>
             </li>
             <li>
               <a href="RandomizadorCaracter.html">Quiz</a>
@@ -35,9 +36,6 @@
           </ul>
         </div>
     </div>
-
-    <div class="banner">
-        
-      </div>
+    
 </body>
 </html>
