--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -11,14 +11,20 @@
     <div class="header">
         <div class="container">
           <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
-          <ul class="navbar">
-            <li>
-              <a href="index.html">Início</a>
-            </li>
-            <li class="agora">
-              <a href="RandomizadorCaracter.html">Quiz</a>
-            </li>
-            <li>|</li>
+          <div>
+            <ul class="navbar">
+              <li>
+                <a href="index.html">Início</a>
+              </li>
+              <li>
+                <a href="Personagens.html">Personagens</a>
+              </li>
+              <li class="agora">
+                <a href="#">Quiz</a>
+              </li>
+            </ul>
+          </div>
+            <ul class="navbar">
             <li>
               <a href="Login.html">Login</a>
             </li>
@@ -26,6 +32,7 @@
               <a href="Cadastro.html">Cadastro</a>
             </li>
           </ul>
+        </div>
         </div>
     </div>
     <button onclick="Randomizar()">
