validações no cadastro

--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -36,6 +36,7 @@
                     <label for="nome_input">Nome</label>
                 </span>
                 <input type="text" id="nome_input">
+                <span class="mensagem_erro" id="erro_nome"></span>
 
             </div>
             <div class="inputbox">
@@ -44,6 +45,7 @@
                     <label for="email_input">Email</label>
                 </span>
                 <input type="email" id="email_input">
+                <span class="mensagem_erro" id="erro_email"></span>
 
             </div>
             <div class="inputbox">
@@ -52,6 +54,7 @@
                     <label for="senha_input">Senha</label>
                 </span>
                 <input type="password" id="senha_input">
+                <span class="mensagem_erro" id="erro_senha"></span>
 
             </div>
             <div class="inputbox">
@@ -60,6 +63,7 @@
                     <label for="confirmacao_senha_input"> Confirmar Senha</label>
                 </span>
                 <input type="password" id="confirmacao_senha_input">
+                <span class="mensagem_erro" id="erro_confirmacao"></span>
 
             </div>
             <div class="forget">
@@ -69,7 +73,7 @@
             </div>
             <button id="btCadastro" onclick="cadastrar()">Cadastrar</button>
             <div class="register">
-                <p>Já possui uma conta ? &nbsp;<a href="Login.html">Entrar</a></p>
+                <p>Já possui uma conta ?<a href="Login.html">Entrar</a></p>
             </div>
         </div>
     </div>
@@ -92,15 +96,23 @@
             emailVar == "" ||
             senhaVar == "" ||
             confirmacaoSenhaVar == ""
-        ) {
-            cardErro.style.display = "block";
-            mensagem_erro.innerHTML =
-                "(Mensagem de erro para todos os campos em branco)";
-
-            finalizarAguardar();
-            return false;
-        } else {
-            setInterval(sumirMensagem, 5000);
+        ){
+            erro_nome.innerHTML = 
+                "Algum em branco!!";
+        }else if(nomeVar.trim() == ""){
+            erro_nome.innerHTML =
+                "Nome invalido"
+        }else if(emailVar.trim() == "" || emailVar.indexOf("@") == -1 || email.indexOf(".") == -1){
+            erro_email.innerHTML =
+                "Email invalido"
+        }else if(senhaVar.length < 8){
+            erro_senha.innerHTML =
+                "senha deve conter 8 ou mais caracteres"
+        }else if(confirmacaoSenhaVar != senhaVar){
+            erro_confirmacao.innerHTML = 
+                "As senhas devem ser iguais"
+        }else{
+            serInterval(sumirMensagem, 5000)
         }
 
         // Enviando o valor da nova input
