--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -82,7 +82,6 @@
 </html>
 <script>
     function cadastrar() {
-        
 
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
@@ -154,5 +153,9 @@
             });
 
         return false;
+    }
+
+    function sumirMensagem() {
+    cardErro.style.display = "none";
     }
 </script>
