--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshin | Página Inicial</title>
 
+    <script src="./JS/Cadastro.js"></script>
+
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
-<body>
+<body onload="validarSessao()">
     <div class="header">
         <div class="container">
           <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
