não possuir cadastro

--- a/Site/public/Login.html
+++ b/Site/public/Login.html
@@ -48,6 +48,9 @@
             <button id="btCadastro" onclick="entrar()">
                 Entrar
             </button>
+            <a href="Cadastro.html">
+                Não possuo cadastro
+            </a>
             <a href="index.html">
                 Voltar a
                 Home
