--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -34,7 +34,7 @@
 
                 <span>
                     <label for="nome_input">Nome</label>
-                </span>
+                </span><br>
                 <input type="text" id="nome_input">
                 <span class="mensagem_erro" id="erro_nome"></span>
 
@@ -43,7 +43,7 @@
 
                 <span>
                     <label for="email_input">Email</label>
-                </span>
+                </span><br>
                 <input type="email" id="email_input">
                 <span class="mensagem_erro" id="erro_email"></span>
 
@@ -52,7 +52,7 @@
 
                 <span>
                     <label for="senha_input">Senha</label>
-                </span>
+                </span><br>
                 <input type="password" id="senha_input">
                 <span class="mensagem_erro" id="erro_senha"></span>
 
@@ -61,19 +61,19 @@
 
                 <span>
                     <label for="confirmacao_senha_input"> Confirmar Senha</label>
-                </span>
+                </span><br>
                 <input type="password" id="confirmacao_senha_input">
                 <span class="mensagem_erro" id="erro_confirmacao"></span>
 
             </div>
             <div class="forget">
-                <label for="memorizar_input"><input type="checkbox" id="memorizar_input">Lembrar de Mim <a
-                        href="index.html">Voltar a
-                        Home</a></label>
+                <a href="index.html">
+                    Voltar a Home
+                </a>
             </div>
             <button id="btCadastro" onclick="cadastrar()">Cadastrar</button>
             <div class="register">
-                <p>Já possui uma conta ?<a href="Login.html">Entrar</a></p>
+                <p>Já possui uma conta ? <a href="Login.html">Entrar</a></p>
             </div>
         </div>
     </div>
