--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/personagens.css">
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
+
+    <script src="JS/personagens.js"></script>
 </head>
 <body>
 
@@ -63,62 +65,63 @@
           <option value="diluc">Diluc</option>
           <option value="diona">Diona</option>
           <option value="dori">Dori</option>
-          <option value="eula"></option>
-          <option value="faruzan"></option>
-          <option value="fischl"></option>
-          <option value="freminet"></option>
-          <option value="furina"></option>
-          <option value="ganyu"></option>
-          <option value="gorou"></option>
-          <option value="heizou"></option>
+          <option value="eula">Eula</option>
+          <option value="faruzan">Faruzan</option>
+          <option value="fischl">Fischl</option>
+          <option value="freminet">Freminet</option>
+          <option value="furina">Furina</option>
+          <option value="ganyu">Ganyu</option>
+          <option value="gorou">Gorou</option>
+          <option value="heizou">Heizou</option>
           <option value="hu tao">Hu Tao</option>
-          <option value="itto"></option>
-          <option value="jean"></option>
-          <option value="kaeya"></option>
-          <option value="kaveh"></option>
-          <option value="kazuha"></option>
-          <option value="keqing"></option>
-          <option value="kirara"></option>
-          <option value="klee"></option>
-          <option value="kokomi"></option>
-          <option value="kuki"></option>
-          <option value="layla"></option>
-          <option value="lisa"></option>
-          <option value="lumine"></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
+          <option value="itto">Itto</option>
+          <option value="jean">Jean</option>
+          <option value="kaeya">Kaeya</option>
+          <option value="kaveh">Kaveh</option>
+          <option value="kazuha">Kazuha</option>
+          <option value="keqing">Keqing</option>
+          <option value="kirara">Kirara</option>
+          <option value="klee">Klee</option>
+          <option value="kokomi">Kokomi</option>
+          <option value="kuki">Kuki</option>
+          <option value="layla">Layla</option>
+          <option value="lisa">Lisa</option>
+          <option value="lumine">Lumine</option>
+          <option value="lynette">Lynette</option>
+          <option value="lyney">Lyney</option>
+          <option value="mika">Mika</option>
+          <option value="mona">Mona</option>
+          <option value="nahida">Nahida</option>
+          <option value="navia">Navia</option>
+          <option value="neuvillette">Neuvillette</option>
+          <option value="nilou">Nilou</option>
+          <option value="ningguang">Ningguang</option>
+          <option value="noelle">Noelle</option>
+          <option value="qiqi">Qiqi</option>
+          <option value="raiden">Raiden</option>
+          <option value="razor">Razor</option>
+          <option value="rosaria">Rosaria</option>
+          <option value="sara">Sara</option>
+          <option value="sayu">Sayu</option>
+          <option value="shenhe">Shenhe</option>
+          <option value="sucrose">Sucrose</option>
+          <option value="tartaglia">Tartaglia</option>
+          <option value="thoma">Thoma</option>
+          <option value="tighnari">Tighnari</option>
+          <option value="traveler">Traveler</option>
+          <option value="venti">Venti</option>
+          <option value="wriothesley">Wriothesley</option>
+          <option value="xiangling">Xiangling</option>
+          <option value="xiao">Xiao</option>
+          <option value="xingqiu">Xingqiu</option>
+          <option value="xinyan">Xinyan</option>
+          <option value="yae">Yae</option>
+          <option value="yanfei">Yanfei</option>
+          <option value="yaoyao">Yaoyao</option>
+          <option value="yelan">Yelan</option>
+          <option value="yoimiya">Yoimiya</option>
+          <option value="yun jin">Yun jin</option>
+          <option value="zhongli">Zhongli</option>
         </select>
         <button onclick="Buscar()">
           buscar
@@ -131,176 +134,3 @@
     
 </body>
 </html>
-
-<script>
-  ListaPersonagem = [
-    'albedo',
-    'alhaitham',
-    'aloy',
-    'amber',
-    'andarilho',
-    'ayaka',
-    'ayato',
-    'baizhu',
-    'barbara',
-    'beidou',
-    'bennett',
-    'candace',
-    'charlotte',
-    'chevreuse',
-    'chongyun',
-    'collei',
-    'cyno',
-    'dehya',
-    'diluc',
-    'diona',
-    'dori',
-    'eula',
-    'faruzan',
-    'fischl',
-    'freminet',
-    'furina',
-    'ganyu',
-    'gorou',
-    'heizou',
-    'hu tao',
-    'itto',
-    'jean',
-    'kaeya',
-    'kaveh',
-    'kazuha',
-    'keqing',
-    'kirara',
-    'klee',
-    'kokomi',
-    'kuki',
-    'layla',
-    'lisa',
-    'lumine',
-    'lynnette',
-    'lyney',
-    'mika',
-    'mona',
-    'nahida',
-    'navia',
-    'neuvillette',
-    'nilou',
-    'ningguang',
-    'noelle',
-    'qiqi',
-    'raiden',
-    'razor',
-    'rosaria',
-    'sara',
-    'sayu',
-    'shenhe',
-    'sucrose',
-    'tartaglia',
-    'thoma',
-    'tighnari',
-    'traveler',
-    'venti',
-    'wriothesley',
-    'xiangling',
-    'xiao',
-    'xingqiu',
-    'xinyan',
-    'yae',
-    'yanfei',
-    'yaoyao',
-    'yelan',
-    'yoimiya',
-    'yun jin',
-    'zhongli'
-  ]
-  ListaIcon = [
-        "assets/imgs/iconCaracter/Albedo.webp",
-        "assets/imgs/iconCaracter/Alhaitham.webp",
-        "assets/imgs/iconCaracter/Aloy.webp",
-        "assets/imgs/iconCaracter/Amber.webp",
-        "assets/imgs/iconCaracter/Andarilho.webp",
-        "assets/imgs/iconCaracter/ayaka.webp",
-        "assets/imgs/iconCaracter/Ayato.webp",
-        "assets/imgs/iconCaracter/Baizhu.webp",
-        "assets/imgs/iconCaracter/Barbara.webp",
-        "assets/imgs/iconCaracter/Beidou.webp",
-        "assets/imgs/iconCaracter/Bennett.webp",
-        "assets/imgs/iconCaracter/Candace.webp",
-        "assets/imgs/iconCaracter/Charlotte.webp",
-        "assets/imgs/iconCaracter/Chevreuse.webp",
-        "assets/imgs/iconCaracter/Chongyun.webp",
-        "assets/imgs/iconCaracter/Collei.webp",
-        "assets/imgs/iconCaracter/Cyno.webp",
-        "assets/imgs/iconCaracter/Dehya.webp",
-        "assets/imgs/iconCaracter/Diluc.webp",
-        "assets/imgs/iconCaracter/Diona.webp",
-        "assets/imgs/iconCaracter/Dori.webp",
-        "assets/imgs/iconCaracter/Eula.webp",
-        "assets/imgs/iconCaracter/Faruzan.webp",
-        "assets/imgs/iconCaracter/Fischl.webp",
-        "assets/imgs/iconCaracter/Freminet.webp",
-        "assets/imgs/iconCaracter/Furina.webp",
-        "assets/imgs/iconCaracter/Ganyu.webp",
-        "assets/imgs/iconCaracter/Gorou.webp",
-        "assets/imgs/iconCaracter/Heizou.webp",
-        "assets/imgs/iconCaracter/Hutao.webp",
-        "assets/imgs/iconCaracter/Itto.webp",
-        "assets/imgs/iconCaracter/Jean.webp",
-        "assets/imgs/iconCaracter/Kaeya.webp",
-        "assets/imgs/iconCaracter/Kaveh.webp",
-        "assets/imgs/iconCaracter/Kazuha.webp",
-        "assets/imgs/iconCaracter/Keqing.webp",
-        "assets/imgs/iconCaracter/Kirara.webp",
-        "assets/imgs/iconCaracter/Klee.webp",
-        "assets/imgs/iconCaracter/Kokomi.webp",
-        "assets/imgs/iconCaracter/Kuki.webp",
-        "assets/imgs/iconCaracter/Layla.webp",
-        "assets/imgs/iconCaracter/Lisa.webp",
-        "assets/imgs/iconCaracter/Lumine.webp",
-        "assets/imgs/iconCaracter/Lynette.webp",
-        "assets/imgs/iconCaracter/Lyney.webp",
-        "assets/imgs/iconCaracter/Mika.webp",
-        "assets/imgs/iconCaracter/Mona.webp",
-        "assets/imgs/iconCaracter/Nahida.webp",
-        "assets/imgs/iconCaracter/Navia.webp",
-        "assets/imgs/iconCaracter/Neuvillette.webp",
-        "assets/imgs/iconCaracter/Nilou.webp",
-        "assets/imgs/iconCaracter/Ningguang.webp",
-        "assets/imgs/iconCaracter/Noelle.webp",
-        "assets/imgs/iconCaracter/Qiqi.webp",
-        "assets/imgs/iconCaracter/Raiden.webp",
-        "assets/imgs/iconCaracter/Razor.webp",
-        "assets/imgs/iconCaracter/Rosaria.webp",
-        "assets/imgs/iconCaracter/Sara.webp",
-        "assets/imgs/iconCaracter/Sayu.webp",
-        "assets/imgs/iconCaracter/Shenhe.webp",
-        "assets/imgs/iconCaracter/Sucrose.webp",
-        "assets/imgs/iconCaracter/Tartaglia.webp",
-        "assets/imgs/iconCaracter/Thoma.webp",
-        "assets/imgs/iconCaracter/Tighnari.webp",
-        "assets/imgs/iconCaracter/Traveler.webp",
-        "assets/imgs/iconCaracter/Venti.webp",
-        "assets/imgs/iconCaracter/Wriothesley.webp",
-        "assets/imgs/iconCaracter/Xiangling.webp",
-        "assets/imgs/iconCaracter/Xiao.webp",
-        "assets/imgs/iconCaracter/Xingqiu.webp",
-        "assets/imgs/iconCaracter/Xinyan.webp",
-        "assets/imgs/iconCaracter/Yae.webp",
-        "assets/imgs/iconCaracter/Yanfei.webp",
-        "assets/imgs/iconCaracter/Yaoyao.webp",
-        "assets/imgs/iconCaracter/Yelan.webp",
-        "assets/imgs/iconCaracter/Yoimiya.webp",
-        "assets/imgs/iconCaracter/Yunjin.webp",
-        "assets/imgs/iconCaracter/Zhongli.webp",
-    ]
-
-
-  function Buscar(){
-    for(posicao = 0; posicao <= ListaPersonagem.length; posicao += 1)
-    if(select_personagem.value == ListaPersonagem[posicao]){
-      div_informações.innerHTML =`
-        correto <img src="${ListaIcon[posicao]}" alt="${ListaPersonagem[posicao]}">
-      `
-    }
-  }
-</script>
