--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -174,11 +174,14 @@
                     Voltar a Home
                 </a>
             </div>
-            <div class="register">
+            <div>
                 <p>Já possui uma conta ? <a href="Login.html">Entrar</a></p>
             </div>
+
         </div>
+
     </div>
+    
 </body>
 
 </html>
