--- a/Site/public/Login.html
+++ b/Site/public/Login.html
@@ -48,13 +48,18 @@
             <button id="btCadastro" onclick="entrar()">
                 Entrar
             </button>
-            <a href="Cadastro.html">
-                Não possuo cadastro
-            </a>
-            <a href="index.html">
-                Voltar a
-                Home
-            </a>
+            <div>
+                <a href="index.html">
+                    Voltar a
+                    Home
+                </a>
+            </div>
+            <div>
+                <a href="Cadastro.html">
+                    Não possuo cadastro
+                </a>
+            </div><br>
+
         </div>
 
         <div id="div_aguardar" class="loading-div">
@@ -85,53 +90,53 @@
             setInterval(sumirMensagem, 5000)
         }
 
-            console.log("FORM LOGIN: ", emailVar);
-            console.log("FORM SENHA: ", senhaVar);
+        console.log("FORM LOGIN: ", emailVar);
+        console.log("FORM SENHA: ", senhaVar);
 
-            fetch("/usuarios/autenticar", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    emailServer: emailVar,
-                    senhaServer: senhaVar
-                })
-            }).then(function (resposta) {
-                console.log("ESTOU NO THEN DO entrar()!")
+        fetch("/usuarios/autenticar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                emailServer: emailVar,
+                senhaServer: senhaVar
+            })
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO entrar()!")
 
-                if (resposta.ok) {
-                    console.log(resposta);
-                    
-                        resposta.json().then(json => {
-                        console.log(json);
-                        console.log(JSON.stringify(json));
-                        sessionStorage.EMAIL_USUARIO = json.email;
-                        sessionStorage.NOME_USUARIO = json.nome;
-                        sessionStorage.ID_USUARIO = json.id;
+            if (resposta.ok) {
+                console.log(resposta);
 
-                        setTimeout(function () {
+                resposta.json().then(json => {
+                    console.log(json);
+                    console.log(JSON.stringify(json));
+                    sessionStorage.EMAIL_USUARIO = json.email;
+                    sessionStorage.NOME_USUARIO = json.nome;
+                    sessionStorage.ID_USUARIO = json.id;
+
+                    setTimeout(function () {
                         window.location = "index.html";
                     }, 1000); // apenas para exibir o loading
 
-                    });
+                });
 
 
-                } else {
+            } else {
 
-                    console.log("Houve um erro ao tentar realizar o login!");
+                console.log("Houve um erro ao tentar realizar o login!");
 
-                    resposta.text().then(texto => {
-                        console.error(texto);
-                    });
-                }
+                resposta.text().then(texto => {
+                    console.error(texto);
+                });
+            }
 
-            }).catch(function (erro) {
-                console.log(erro);
-            })
+        }).catch(function (erro) {
+            console.log(erro);
+        })
 
-            return false;
-        
+        return false;
+
     }
 
     function sumirMensagem() {
