--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
 </head>
-<body onload="validarSessao()">
-  <!--  -->
+<body >
+  <!-- onload="validarSessao()" -->
     <div class="header">
         <div class="container">
           <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
