--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -140,9 +140,11 @@
         <div class="div_contexto">
           <h1>ALBEDO</h1>
           <p>
-            O misterioso Albedo é o Chefe Alquimista e Capitão da Equipe de Investigação dos Cavaleiros de Favonius, com Sucrose como sua assistente. Ele tem um desejo infinito de aprender sobre o mundo de Teyvat, estudando cuidadosamente todos os objetos ao seu redor.
+            O misterioso Albedo é o Chefe Alquimista e Capitão da Equipe de Investigação dos Cavaleiros de Favonius, com
+            Sucrose como sua assistente. Ele tem um desejo infinito de aprender sobre o mundo de Teyvat, estudando
+            cuidadosamente todos os objetos ao seu redor.
           </p><br>
-          <img src="assets/imgs/Personagens/albedo/albedo_weapon.webp" alt="" >
+          <img src="assets/imgs/Personagens/albedo/albedo_weapon.webp" alt="">
         </div>
         <div class="div_card">
           <img src="assets/imgs/Personagens/albedo/albedo_gacha_card.webp" alt="albedo_gacha_card">
@@ -151,20 +153,28 @@
 
       <div class="container2">
         <div class="div_idle1">
-          <video src="assets/imgs/Personagens/albedo/albedo_idle1.mp4"></video>
+          <video controls src="assets/imgs/Personagens/albedo/albedo_idle1.mp4"></video>
         </div>
         <div class="div_spin">
           <video autoplay muted loop src="assets/imgs/Personagens/albedo/albedo_360.mp4"></video>
         </div>
         <div class="div_idle2">
-          <video src="assets/imgs/Personagens/albedo/albedo_idle2.mp4"></video>
+          <video controls src="assets/imgs/Personagens/albedo/albedo_idle2.mp4"></video>
         </div>
       </div>
 
       <div class="container3">
         <h1>Habilidades</h1>
         <div class="div_skill3">
-          video
+          <video autoplay muted loop src="assets/imgs/Personagens/albedo/albedo_skill3.mp4"></video>
+
+          <p>
+            Sob o comando de Albedo, os cristais Geo surgem e explodem, causando Dano Geo em uma AdE na frente dele. Se
+            houver Radiação Solar no campo criado pelo próprio Albedo, 7 Flores Fatais serão geradas na zona da Radiação
+            Solar, florescendo violentamente e causando Dano Geo em uma AdE.
+
+            O Dano causado pela explosão e da Flor Fatal não gerará Flores Transitórias.
+          </p>
         </div>
       </div>
 
