--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -241,7 +241,7 @@
             'layla',
             'lisa',
             'lumine',
-            'lynnette',
+            'lynette',
             'lyney',
             'mika',
             'mona',
