--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -133,7 +133,7 @@
 
     </div>
     <div id="div_informações">
-      <div class="container1">
+      <!-- <div class="container1">
         <div class="div_icon">
           <img src="assets/imgs/iconCaracter/Albedo.webp" alt="albedo">
         </div>
@@ -144,41 +144,77 @@
             Sucrose como sua assistente. Ele tem um desejo infinito de aprender sobre o mundo de Teyvat, estudando
             cuidadosamente todos os objetos ao seu redor.
           </p><br>
-          <img src="assets/imgs/Personagens/albedo/albedo_weapon.webp" alt="">
+          <img class="img_arma" src="assets/Personagens/albedo/albedo_weapon.webp" alt="">
+          <br><br>
+          <img class="img_splash" src="assets/Personagens/albedo/albedo_gacha_splash.webp" alt="">
         </div>
         <div class="div_card">
-          <img src="assets/imgs/Personagens/albedo/albedo_gacha_card.webp" alt="albedo_gacha_card">
-        </div>
-      </div>
-
-      <div class="container2">
-        <div class="div_idle1">
-          <video controls src="assets/imgs/Personagens/albedo/albedo_idle1.mp4"></video>
-        </div>
-        <div class="div_spin">
-          <video autoplay muted loop src="assets/imgs/Personagens/albedo/albedo_360.mp4"></video>
-        </div>
-        <div class="div_idle2">
-          <video controls src="assets/imgs/Personagens/albedo/albedo_idle2.mp4"></video>
+          <img src="assets/Personagens/albedo/albedo_gacha_card.webp" alt="albedo_gacha_card">
         </div>
       </div>
 
       <div class="container3">
         <h1>Habilidades</h1>
         <div class="div_skill3">
-          <video autoplay muted loop src="assets/imgs/Personagens/albedo/albedo_skill3.mp4"></video>
+          <video autoplay muted loop src="assets/Personagens/albedo/albedo_skill3.mp4"></video>
 
           <p>
             Sob o comando de Albedo, os cristais Geo surgem e explodem, causando Dano Geo em uma AdE na frente dele. Se
             houver Radiação Solar no campo criado pelo próprio Albedo, 7 Flores Fatais serão geradas na zona da Radiação
-            Solar, florescendo violentamente e causando Dano Geo em uma AdE.
+            Solar, florescendo violentamente e causando Dano Geo em uma AdE.<br><br>
 
             O Dano causado pela explosão e da Flor Fatal não gerará Flores Transitórias.
           </p>
         </div>
+        <div class="div_skill1">
+          <p>
+            Ataque Normal<br>
+            Realiza até 5 golpes rápidos.<br><br>
+
+            Ataque Carregado<br>
+            Consome uma certa quantidade de Stamina para desferir 2 golpes rápidos com a espada.<br><br>
+
+            Ataque Imersivo<br>
+            Mergulha em pleno ar para golpear o chão, causando dano aos inimigos ao longo do caminho e infligindo Dano
+            em uma AdE durante o impacto.
+          </p>
+          <video autoplay muted loop src="assets/Personagens/albedo/albedo_skill1.mp4"></video>
+        </div>
+        <div class="div_skill2">
+          <video autoplay muted loop src="assets/Personagens/albedo/albedo_skill2.mp4"></video>
+          <p>
+            A criação da Radiação Solar causa Dano Geo em uma AdE<br><br>
+
+            Radiação Solar
+            Tem as seguintes propriedades:
+            Quando inimigos dentro da área da Radiação Solar são atingidos, a Radiação Solar gerará Flores Transitórias
+            que causam Dano Geo em uma AdE. Dano causado escala conforme a DEF de Albedo.<br>
+            Flores Transitórias só podem ser gerada uma vez a cada 2s.
+            Quando um personagem está localizado no local da Radiação Solar, a Radiação Solar irá acumular o poder Geo,
+            erguendo-os em um pódio cristalizado. Apenas um pódio cristalizado pode existir por vez.<br>
+            Somente é possível existir uma Radiação Solar por vez feita por Albedo, e é considerada como uma Construção
+            Geo.<br><br>
+
+            Manter pressionado para designar a localização da habilidade.
+          </p>
+        </div>
       </div>
 
+      <div class="container2">
+        <h1>GALERIA</h1>
+        <div class="div_idle1">
+          <video autoplay muted loop src="assets/Personagens/albedo/albedo_idle1.mp4"></video>
+        </div>
+        <div class="div_spin">
+          <video autoplay muted loop src="assets/Personagens/albedo/albedo_360.mp4"></video>
+        </div>
+        <div class="div_idle2">
+          <video autoplay muted loop src="assets/Personagens/albedo/albedo_idle2.mp4"></video>
+        </div>
+      </div> -->
+
     </div>
+
   </div>
 
 </body>
