--- a/Site/public/Personagens.html
+++ b/Site/public/Personagens.html
@@ -44,6 +44,10 @@
 
   <div class="div_corpo">
     <div>
+      
+      <button class="btBuscar" onclick="Buscar()">
+        buscar
+      </button><br>
 
       <select id="select_personagem">
         <option disabled selected>Personagem</option>
@@ -125,15 +129,11 @@
         <option value="yoimiya">Yoimiya</option>
         <option value="yunjin">Yun jin</option>
         <option value="zhongli">Zhongli</option>
-      </select>
-
-      <button onclick="Buscar()">
-        buscar
-      </button>
+      </select>      
 
     </div>
     <div id="div_informações">
-      <!-- <div class="container1">
+      <div class="container1">
         <div class="div_icon">
           <img src="assets/imgs/iconCaracter/Albedo.webp" alt="albedo">
         </div>
@@ -211,7 +211,7 @@
         <div class="div_idle2">
           <video autoplay muted loop src="assets/Personagens/albedo/albedo_idle2.mp4"></video>
         </div>
-      </div> -->
+      </div>
 
     </div>
 
