--- a/Site/public/RandomizadorCaracter.html
+++ b/Site/public/RandomizadorCaracter.html
@@ -1,137 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshindle</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/randomizador.css">
-    <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
-</head>
-<body>
-    <div class="header">
-        <div class="container">
-          <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
-          <div>
-            <ul class="navbar">
-              <li>
-                <a href="index.html">Início</a>
-              </li>
-              <li>
-                <a href="Personagens.html">Personagens</a>
-              </li>
-              <li class="agora">
-                <a href="#">Quiz</a>
-              </li>
-            </ul>
-          </div>
-            <ul class="navbar">
-            <li>
-              <a href="Login.html">Login</a>
-            </li>
-            <li>
-              <a href="Cadastro.html">Cadastro</a>
-            </li>
-          </ul>
-        </div>
-        </div>
-    </div>
-    <button onclick="Randomizar()">
-        Randomizar um personagem
-    </button>
-    <div id="div_caracter_icon">
-        <img src="assets/imgs/iconCaracter/ayaka.webp" alt="" >
-    </div>
-    <label for="nome_personagem_input">Nome do personagem:</label>
-    <input type="text" id="nome_personagem_input">
-</body>
-</html>
 
-<script>
-    ListaIcon = [
-        "assets/imgs/iconCaracter/Albedo.webp",
-        "assets/imgs/iconCaracter/Alhaitham.webp",
-        "assets/imgs/iconCaracter/Aloy.webp",
-        "assets/imgs/iconCaracter/Amber.webp",
-        "assets/imgs/iconCaracter/Andarilho.webp",
-        "assets/imgs/iconCaracter/ayaka.webp",
-        "assets/imgs/iconCaracter/Ayato.webp",
-        "assets/imgs/iconCaracter/Baizhu.webp",
-        "assets/imgs/iconCaracter/Barbara.webp",
-        "assets/imgs/iconCaracter/Beidou.webp",
-        "assets/imgs/iconCaracter/Bennett.webp",
-        "assets/imgs/iconCaracter/Candace.webp",
-        "assets/imgs/iconCaracter/Charlotte.webp",
-        "assets/imgs/iconCaracter/Chevreuse.webp",
-        "assets/imgs/iconCaracter/Chongyun.webp",
-        "assets/imgs/iconCaracter/Collei.webp",
-        "assets/imgs/iconCaracter/Cyno.webp",
-        "assets/imgs/iconCaracter/Dehya.webp",
-        "assets/imgs/iconCaracter/Diluc.webp",
-        "assets/imgs/iconCaracter/Diona.webp",
-        "assets/imgs/iconCaracter/Dori.webp",
-        "assets/imgs/iconCaracter/Eula.webp",
-        "assets/imgs/iconCaracter/Faruzan.webp",
-        "assets/imgs/iconCaracter/Fischl.webp",
-        "assets/imgs/iconCaracter/Freminet.webp",
-        "assets/imgs/iconCaracter/Furina.webp",
-        "assets/imgs/iconCaracter/Ganyu.webp",
-        "assets/imgs/iconCaracter/Gorou.webp",
-        "assets/imgs/iconCaracter/Heizou.webp",
-        "assets/imgs/iconCaracter/Hutao.webp",
-        "assets/imgs/iconCaracter/Itto.webp",
-        "assets/imgs/iconCaracter/Jean.webp",
-        "assets/imgs/iconCaracter/Kaeya.webp",
-        "assets/imgs/iconCaracter/Kaveh.webp",
-        "assets/imgs/iconCaracter/Kazuha.webp",
-        "assets/imgs/iconCaracter/Keqing.webp",
-        "assets/imgs/iconCaracter/Kirara.webp",
-        "assets/imgs/iconCaracter/Klee.webp",
-        "assets/imgs/iconCaracter/Kokomi.webp",
-        "assets/imgs/iconCaracter/Kuki.webp",
-        "assets/imgs/iconCaracter/Layla.webp",
-        "assets/imgs/iconCaracter/Lisa.webp",
-        "assets/imgs/iconCaracter/Lumine.webp",
-        "assets/imgs/iconCaracter/Lynette.webp",
-        "assets/imgs/iconCaracter/Lyney.webp",
-        "assets/imgs/iconCaracter/Mika.webp",
-        "assets/imgs/iconCaracter/Mona.webp",
-        "assets/imgs/iconCaracter/Nahida.webp",
-        "assets/imgs/iconCaracter/Navia.webp",
-        "assets/imgs/iconCaracter/Neuvillette.webp",
-        "assets/imgs/iconCaracter/Nilou.webp",
-        "assets/imgs/iconCaracter/Ningguang.webp",
-        "assets/imgs/iconCaracter/Noelle.webp",
-        "assets/imgs/iconCaracter/Qiqi.webp",
-        "assets/imgs/iconCaracter/Raiden.webp",
-        "assets/imgs/iconCaracter/Razor.webp",
-        "assets/imgs/iconCaracter/Rosaria.webp",
-        "assets/imgs/iconCaracter/Sara.webp",
-        "assets/imgs/iconCaracter/Sayu.webp",
-        "assets/imgs/iconCaracter/Shenhe.webp",
-        "assets/imgs/iconCaracter/Sucrose.webp",
-        "assets/imgs/iconCaracter/Tartaglia.webp",
-        "assets/imgs/iconCaracter/Thoma.webp",
-        "assets/imgs/iconCaracter/Tighnari.webp",
-        "assets/imgs/iconCaracter/Traveler.webp",
-        "assets/imgs/iconCaracter/Venti.webp",
-        "assets/imgs/iconCaracter/Wriothesley.webp",
-        "assets/imgs/iconCaracter/Xiangling.webp",
-        "assets/imgs/iconCaracter/Xiao.webp",
-        "assets/imgs/iconCaracter/Xingqiu.webp",
-        "assets/imgs/iconCaracter/Xinyan.webp",
-        "assets/imgs/iconCaracter/Yae.webp",
-        "assets/imgs/iconCaracter/Yanfei.webp",
-        "assets/imgs/iconCaracter/Yaoyao.webp",
-        "assets/imgs/iconCaracter/Yelan.webp",
-        "assets/imgs/iconCaracter/Yoimiya.webp",
-        "assets/imgs/iconCaracter/Yunjin.webp",
-        "assets/imgs/iconCaracter/Zhongli.webp",
-    ]
-    
-    function Randomizar(){
-        var icon = ListaIcon[parseInt(Math.random() * ListaIcon.length)]
-        div_caracter_icon.innerHTML =`<img src="${icon}" alt="ayaka" height="100px">
-        `
-    }
-</script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Genshindle</title>
+
+  <script src="JS/randomizador.js"></script>
+
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/randomizador.css">
+  <link rel="icon" href="assets/imgs/Logo/Logo.jpg">
+</head>
+
+<body>
+  <div class="header">
+    <div class="container">
+      <img src="assets/imgs/Logo/Genshin_Impact_logo.svg.png" alt="genshin logo" height="70px">
+      <div>
+        <ul class="navbar">
+          <li>
+            <a href="index.html">Início</a>
+          </li>
+          <li>
+            <a href="Personagens.html">Personagens</a>
+          </li>
+          <li class="agora">
+            <a href="#">Quiz</a>
+          </li>
+        </ul>
+      </div>
+      <ul class="navbar">
+        <li>
+          <a href="Login.html">Login</a>
+        </li>
+        <li>
+          <a href="Cadastro.html">Cadastro</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </div>
+  <div class="div_corpo">
+
+    <div class="container1">
+
+      <div class="div_borda">
+        <button onclick="Randomizar()">
+          Randomizar um personagem
+        </button><br>
+
+        <div id="div_caracter_icon">
+          <img src="assets/imgs/iconCaracter/ayaka.webp" alt="" height="115px">
+        </div>
+
+        <label for="nome_personagem_input" style="color: white;">Nome do personagem:</label><br>
+
+        <input onkeydown="VerificarAcerto(Enter)" type="text" id="nome_personagem_input">
+      </div>
+
+    </div>
+
+    <div id="div_pontuacao" class="container2">
+      usuario:<br><br>
+      Pontos:
+    </div>
+
+    <img src="assets/imgs/Background/esperando.webp" alt="paimon" class="paimon">
+  </div>
+
+
+</body>
+
+</html>
