validação em randomizar

--- a/Site/public/Cadastro.html
+++ b/Site/public/Cadastro.html
@@ -179,9 +179,9 @@
             </div>
 
         </div>
-
+        
     </div>
-    
+    <img src="assets/imgs/Background/zhongli_espreitando.gif" alt="zhongli" class="zhongli">
 </body>
 
 </html>
