--- a/Site/public/Login.html
+++ b/Site/public/Login.html
@@ -70,7 +70,7 @@
     </div>
     </div>
     </div>
-
+    <img src="assets/imgs/Background/zhongli_espreitando.gif" alt="zhongli" class="zhongli">
 </body>
 
 </html>
